[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochastic-engine"
version = "0.3.1"
description = "A comprehensive, Pythonic quantitative finance library for stochastic processes, option pricing, and risk metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Akash" }
]
keywords = [
    "quantitative-finance",
    "stochastic-processes",
    "option-pricing",
    "black-scholes",
    "monte-carlo",
    "risk-management",
    "var",
    "greeks",
    "heston",
    "garch",
    "binomial-tree",
    "implied-volatility",
    "barrier-options",
    "sabr",
    "cir",
    "vasicek",
    "jump-diffusion",
    "digital-options",
    "multi-asset",
    "correlated-simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]
data = [
    "yfinance>=0.2.0",
]
all = [
    "stochastic-engine[dev,docs,notebooks,data]",
]

[project.urls]
Homepage = "https://github.com/akashdeepo/stochastic-engine"
Documentation = "https://github.com/akashdeepo/stochastic-engine#readme"
Repository = "https://github.com/akashdeepo/stochastic-engine"
Issues = "https://github.com/akashdeepo/stochastic-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["stochastic_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=stochastic_engine --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
